[PRMT-1162] Added swagger docs and basic endpoint for sending health records
