# src/swagger.json
@@ -109,6 +109,50 @@
         ]
       }
     },
+    "/health-record-transfers": {
+      "post": {
+        "tags": ["health-record-transfers"],
+        "summary": "Sends EHR acknowledgement",
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "conversationId",
+            "schema": {
+              "$ref": "#/definitions/HealthRecordTransfer"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Health record successfully sent"
+          },
+          "401": {
+            "description": "Authorization header missing"
+          },
+          "403": {
+            "description": "Authorization key invalid"
+          },
+          "422": {
+            "description": "Validation failed",
+            "schema": {
+              "$ref": "#/definitions/ValidationErrors"
+            }
+          },
+          "503": {
+            "description": "Downstream error when sending EHR extract",
+            "schema": {
+              "$ref": "#/definitions/ServerError"
+            }
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ]
+      }
+    },
     "/health": {
       "get": {
         "tags": ["health"],
@@ -241,6 +285,40 @@
     }
   },
   "definitions": {
+    "HealthRecordTransfer": {
+      "type": "object",
+      "description": "Sends health record to MHS",
+      "properties": {
+        "data": {
+          "type": "object",
+          "properties": {
+            "type": {
+              "type": "string",
+              "enum": ["health-record-transfers"]
+            },
+            "id": {
+              "type": "string",
+              "format": "uuid"
+            },
+            "attributes": {
+              "type": "object",
+              "properties": {
+                "odsCode": {
+                  "type": "string"
+                },
+                "ehrRequestId": {
+                  "type": "string",
+                  "format": "uuid"
+                },
+                "preSignedUrl": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "HealthRecordRequest": {
       "type": "object",
       "description": "Sends health record request to MHS",
